--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,55 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: rgb(247, 247, 247);
+  --surface: rgba(255, 255, 255, 1);
+  --text-primary: rgba(15, 23, 42, 1);
+  --text-secondary: rgb(101, 101, 101);
+  --primary: rgba(37, 99, 235, 1);
+  --primary-hover: rgba(39, 88, 206, 1);
+  --secondary: rgba(52, 122, 218, 1);
+  --success: rgba(22, 163, 74, 1);
+  --warning: rgba(245, 158, 11, 1);
+  --danger: rgba(220, 38, 38, 1);
+
+  --muted: rgba(179, 179, 179, 1);
+}
+.dark {
+  --background: rgba(18, 18, 18, 1);
+  --surface: rgba(40, 40, 40, 1);
+  --text-primary: rgba(255, 255, 255, 1);
+  --text-secondary: rgb(182, 182, 182);
+  --primary: rgba(105, 155, 239, 1);
+  --primary-hover: rgba(79, 143, 237, 1);
+  --secondary: rgba(148, 179, 244, 1);
+  --success: rgba(34, 197, 94, 1);
+  --warning: rgba(251, 191, 36, 1);
+  --danger: rgba(239, 68, 68, 1);
+
+  --muted: rgba(139, 139, 139, 1);
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-mainBg: var(--background);
+  --color-surface: var(--surface);
+  --color-primary: var(--primary);
+  --color-primary-hover: var(--primary-hover);
+  --color-secondary: var(--secondary);
+  --color-success: var(--success);
+  --color-warning: var(--warning);
+  --color-danger: var(--danger);
+  --color-muted: var(--muted);
+  --color-text-primary: var(--text-primary);
+  --color-text-secondary: var(--text-secondary);
+  --font-sans: var(--font-monty);
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@media print {
+  .print-wrapper {
+    width: 210mm; /* A4 width */
+    height: 297mm; /* A4 height */
+    transform: scale(1.5); /* adjust scale to fill page */
+    transform-origin: top left;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
